[gd_scene load_steps=36 format=2]

[ext_resource path="res://assets/images/portraits/daisy_prt.png" type="Texture" id=1]
[ext_resource path="res://assets/Fonts_v2/FontThemes/MainMiddle.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/Textures_v2/QUEST_DIALOGUE/panel_questdialogue2.png" type="Texture" id=3]
[ext_resource path="res://gui_modules/Universal/Modules/TextButton.gd" type="Script" id=4]
[ext_resource path="res://assets/images/gui/scene/hersoframe.png" type="Texture" id=5]
[ext_resource path="res://assets/Textures_v2/CITY/Panels/panel_event_lower_high.png" type="Texture" id=6]
[ext_resource path="res://assets/Textures_v2/CHAR_CREATION/Buttons/frameclass.png" type="Texture" id=7]
[ext_resource path="res://assets/images/scenes/noevent.png" type="Texture" id=8]
[ext_resource path="res://assets/Textures_v2/CITY/Panels/panel_event_lower_divider.png" type="Texture" id=9]
[ext_resource path="res://assets/Textures_v2/CHAR_CREATION/new/button_sprite_hover.png" type="Texture" id=10]
[ext_resource path="res://assets/images/sprites/duncan.png" type="Texture" id=11]
[ext_resource path="res://assets/Textures_v2/CHAR_CREATION/new/button_sprite_default.png" type="Texture" id=12]
[ext_resource path="res://assets/Textures_v2/CITY/Panels/panel_event_upper.png" type="Texture" id=13]
[ext_resource path="res://assets/Themes_v2/UNIVERSAL/VScrollBar.tres" type="Theme" id=14]
[ext_resource path="res://gui_modules/Universal/Scripts/InteractiveMessageModuleAnimated.gd" type="Script" id=15]
[ext_resource path="res://src/scenes/RightClickReactButton.gd" type="Script" id=16]
[ext_resource path="res://assets/Themes_v2/EmptyTexture.tres" type="StyleBox" id=17]
[ext_resource path="res://assets/Textures_v2/QUEST_DIALOGUE/button_hide.png" type="Texture" id=18]
[ext_resource path="res://assets/Textures_v2/QUEST_DIALOGUE/button_hide_hover.png" type="Texture" id=19]
[ext_resource path="res://assets/Textures_v2/QUEST_DIALOGUE/button_hide_pressed.png" type="Texture" id=20]
[ext_resource path="res://assets/Textures_v2/CHAR_CREATION/new/button_sprite_active.png" type="Texture" id=22]
[ext_resource path="res://MainFont.tres" type="DynamicFont" id=23]
[ext_resource path="res://gui_modules/Universal/ShowPanel.tscn" type="PackedScene" id=24]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 9 )
region_rect = Rect2( 0, 0, 800, 679 )
margin_left = 75.0
margin_right = 75.0
margin_top = 75.0
margin_bottom = 64.5747

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 800, 1027 )
margin_left = 75.0
margin_right = 75.0
margin_top = 75.0
margin_bottom = 64.5747

[sub_resource type="StyleBoxTexture" id=3]

[sub_resource type="StyleBoxTexture" id=4]

[sub_resource type="StyleBoxTexture" id=5]

[sub_resource type="StyleBoxTexture" id=6]

[sub_resource type="StyleBoxTexture" id=7]

[sub_resource type="StyleBoxTexture" id=8]

[sub_resource type="StyleBoxTexture" id=9]

[sub_resource type="StyleBoxTexture" id=10]

[sub_resource type="StyleBoxTexture" id=11]

[sub_resource type="StyleBoxTexture" id=12]

[node name="InteractiveMessageModule" type="Control" groups=["disable_rmb_esc", "pauseprocess"]]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 15 )

[node name="CustomBackground" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
expand = true

[node name="CharacterImage" type="TextureRect" parent="."]
visible = false
margin_left = 1030.0
margin_top = -2.0
margin_right = 2187.0
margin_bottom = 1078.0
texture = ExtResource( 11 )
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CharacterImage2" type="TextureRect" parent="."]
visible = false
margin_left = -265.68
margin_top = -2.0
margin_right = 891.32
margin_bottom = 1078.0
texture = ExtResource( 11 )
stretch_mode = 6
flip_h = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EventCharacters" type="ScrollContainer" parent="."]
margin_left = 399.0
margin_top = 101.0
margin_right = 562.0
margin_bottom = 957.0
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="EventCharacters"]
margin_bottom = 856.0
size_flags_vertical = 3
alignment = 1

[node name="Button" type="TextureButton" parent="EventCharacters/VBoxContainer"]
visible = false
margin_top = 345.0
margin_right = 166.0
margin_bottom = 511.0
rect_min_size = Vector2( 166, 166 )
texture_normal = ExtResource( 7 )
expand = true
stretch_mode = 5
script = ExtResource( 16 )

[node name="icon" type="TextureRect" parent="EventCharacters/VBoxContainer/Button"]
margin_left = 9.0
margin_top = 9.0
margin_right = 154.0
margin_bottom = 158.0
mouse_filter = 2
expand = true
stretch_mode = 6

[node name="Label" type="Label" parent="EventCharacters/VBoxContainer/Button"]
margin_left = 8.0
margin_top = 7.0
margin_right = 154.0
margin_bottom = 37.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Elf"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="EventCharacters/VBoxContainer/Button"]
show_behind_parent = true
margin_right = 164.0
margin_bottom = 165.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerCharacters" type="ScrollContainer" parent="."]
visible = false
margin_left = 1357.0
margin_top = 101.0
margin_right = 1520.0
margin_bottom = 957.0
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="PlayerCharacters"]
margin_bottom = 856.0
size_flags_vertical = 3
alignment = 1

[node name="Button" type="TextureButton" parent="PlayerCharacters/VBoxContainer"]
visible = false
margin_top = 345.0
margin_right = 163.0
margin_bottom = 511.0
texture_normal = ExtResource( 5 )

[node name="TextureRect" type="TextureRect" parent="PlayerCharacters/VBoxContainer/Button"]
margin_left = 9.0
margin_top = 9.0
margin_right = 154.0
margin_bottom = 158.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 6

[node name="BackgroundT1" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -400.0
margin_top = -142.0
margin_right = 400.0
margin_bottom = 514.0
custom_styles/panel = SubResource( 1 )

[node name="OptionsBackground" type="Panel" parent="BackgroundT1"]
self_modulate = Color( 0.223529, 0.0313726, 0.337255, 0.901961 )
show_behind_parent = true
margin_top = 434.0
margin_right = 800.0
margin_bottom = 656.0

[node name="DialogueBG" type="Panel" parent="BackgroundT1"]
self_modulate = Color( 0, 0, 0, 0.792157 )
show_behind_parent = true
margin_right = 800.0
margin_bottom = 434.0

[node name="LongFrame" type="Panel" parent="BackgroundT1"]
visible = false
margin_top = -371.0
margin_right = 800.0
margin_bottom = 656.0
mouse_filter = 2
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ImagePanel" type="TextureRect" parent="BackgroundT1"]
visible = false
margin_top = -371.0
margin_right = 801.0
texture = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SceneImage" type="TextureRect" parent="BackgroundT1/ImagePanel"]
show_behind_parent = true
margin_right = 800.0
margin_bottom = 371.0
texture = ExtResource( 8 )
expand = true
stretch_mode = 7

[node name="RichTextLabel" type="RichTextLabel" parent="BackgroundT1"]
margin_left = 24.0
margin_top = 46.0
margin_right = 777.0
margin_bottom = 407.0
theme = ExtResource( 14 )
custom_fonts/normal_font = ExtResource( 2 )
bbcode_enabled = true
scroll_following = true

[node name="ScrollContainer" type="ScrollContainer" parent="BackgroundT1"]
margin_left = 44.0
margin_top = 457.0
margin_right = 766.0
margin_bottom = 632.0
theme = ExtResource( 14 )
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="BackgroundT1/ScrollContainer"]
margin_right = 722.0
margin_bottom = 175.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 14 )
alignment = 2

[node name="Button" type="Button" parent="BackgroundT1/ScrollContainer/VBoxContainer"]
visible = false
margin_top = 145.0
margin_right = 722.0
margin_bottom = 175.0
rect_min_size = Vector2( 0, 30 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
clip_text = true
align = 0
script = ExtResource( 4 )

[node name="Label" type="RichTextLabel" parent="BackgroundT1/ScrollContainer/VBoxContainer/Button"]
margin_left = 24.0
margin_top = -3.0
margin_right = 664.0
margin_bottom = 24.0
mouse_filter = 2
custom_constants/line_separation = -8
custom_fonts/normal_font = ExtResource( 2 )
bbcode_enabled = true
bbcode_text = "[color=#72a887]Test Text[/color]"
text = "Test Text"
fit_content_height = true

[node name="hotkey" type="Label" parent="BackgroundT1/ScrollContainer/VBoxContainer/Button"]
visible = false
margin_left = 4.0
margin_top = -2.66284
margin_right = 34.0
margin_bottom = 35.3372
custom_colors/font_color = Color( 1, 0.980392, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundT2" type="Panel" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = ExtResource( 17 )

[node name="OptionsBackground" type="Panel" parent="BackgroundT2"]
self_modulate = Color( 0.223529, 0.0313726, 0.337255, 0.901961 )
margin_left = 431.0
margin_top = 713.0
margin_right = 1489.0
margin_bottom = 1049.0

[node name="BackgroundT2" type="TextureRect" parent="BackgroundT2"]
margin_left = 430.0
margin_right = 1490.0
margin_bottom = 1050.0
texture = ExtResource( 3 )

[node name="HideButton" type="TextureButton" parent="BackgroundT2/BackgroundT2"]
margin_left = 47.0
margin_top = 988.325
margin_right = 1017.0
margin_bottom = 1028.33
texture_normal = ExtResource( 18 )
texture_pressed = ExtResource( 20 )
texture_hover = ExtResource( 19 )

[node name="Label" type="Label" parent="BackgroundT2/BackgroundT2/HideButton"]
margin_right = 970.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 2 )
text = "Hide"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UnhideButton" type="TextureButton" parent="BackgroundT2/BackgroundT2"]
visible = false
margin_left = -429.831
margin_top = 0.372803
margin_right = -201.831
margin_bottom = 40.3728
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 22 )
texture_hover = ExtResource( 10 )

[node name="Label" type="Label" parent="BackgroundT2/BackgroundT2/UnhideButton"]
margin_left = 11.4745
margin_top = 8.59692
margin_right = 201.474
margin_bottom = 32.5969
custom_fonts/font = ExtResource( 23 )
text = "Unhide"
align = 1
valign = 1

[node name="RichTextLabel" type="RichTextLabel" parent="BackgroundT2"]
margin_left = 477.0
margin_top = 37.0
margin_right = 1446.0
margin_bottom = 673.0
theme = ExtResource( 14 )
custom_fonts/normal_font = ExtResource( 2 )
bbcode_enabled = true
scroll_following = true

[node name="ScrollContainer" type="ScrollContainer" parent="BackgroundT2"]
margin_left = 477.0
margin_top = 732.0
margin_right = 1447.0
margin_bottom = 951.0
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="BackgroundT2/ScrollContainer"]
margin_right = 970.0
margin_bottom = 219.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 14 )
alignment = 2

[node name="Button" type="Button" parent="BackgroundT2/ScrollContainer/VBoxContainer"]
visible = false
margin_top = 205.0
margin_right = 970.0
margin_bottom = 219.0
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 9 )
custom_styles/focus = SubResource( 10 )
custom_styles/disabled = SubResource( 11 )
custom_styles/normal = SubResource( 12 )
script = ExtResource( 4 )

[node name="Label" type="RichTextLabel" parent="BackgroundT2/ScrollContainer/VBoxContainer/Button"]
margin_left = 19.0
margin_top = 9.0
margin_right = 955.0
margin_bottom = 40.0
mouse_filter = 2
custom_constants/line_separation = -8
custom_fonts/normal_font = ExtResource( 2 )
bbcode_enabled = true
bbcode_text = "[color=#72a887]Test Text[/color]"
text = "Test Text"

[node name="hotkey" type="Label" parent="BackgroundT2/ScrollContainer/VBoxContainer/Button"]
visible = false
margin_left = 8.07349
margin_top = 6.28326
margin_right = 38.0735
margin_bottom = 44.2833
custom_colors/font_color = Color( 1, 0.980392, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShowPanel" parent="." instance=ExtResource( 24 )]
visible = false
